// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should render <List /> when files dropped are dropped 1`] = `
<section
  className="jsx-3838599344 "
  onDrop={undefined}
>
  <ul
    className="jsx-631033484"
  >
    <li
      className="jsx-572805028 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
    <li
      className="jsx-572805028 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
  </ul>
</section>
`;

exports[`<Content /> should render <List /> when there are results 1`] = `
<section
  className="jsx-3838599344 "
  onDrop={undefined}
>
  <div
    className="jsx-3534139585 drop"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
  >
    <div
      className="jsx-3534139585 zone "
    >
      <p
        className="jsx-3534139585"
      >
        Drop an episode or season.
      </p>
    </div>
  </div>
  <ul
    className="jsx-631033484"
  >
    <li
      className="jsx-572805028 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
    <li
      className="jsx-572805028 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
  </ul>
</section>
`;

exports[`<Content /> should show <Drop /> when there is no searchQuery and no files dropped 1`] = `
<section
  className="jsx-3838599344 "
  onDrop={undefined}
>
  <div
    className="jsx-3534139585 drop"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
  >
    <div
      className="jsx-3534139585 zone "
    >
      <p
        className="jsx-3534139585"
      >
        Drop an episode or season.
      </p>
    </div>
  </div>
</section>
`;

exports[`<Content /> should show <ListEmpty /> when there is a query but no results 1`] = `
<section
  className="jsx-3838599344 "
  onDrop={undefined}
>
  <ul
    className="jsx-565981134"
  >
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
  </ul>
</section>
`;
